tests/snapshots/regression/collections__nested_collections_with_errors.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/nested_collections_with_errors.flx
exit_code: 1

[ 1 of 10] Compiling  Assert
[ 2 of 10] Compiling  Array
[ 3 of 10] Compiling  List
[ 4 of 10] Compiling  Either
[ 5 of 10] Compiling  IO
[ 6 of 10] Compiling  Math
[ 7 of 10] Compiling  Numeric
[ 8 of 10] Compiling  Option
[ 9 of 10] Compiling  String
• 4 errors • tests/fixtures/collections/nested_collections_with_errors.flx
error[E073]: Missing Comma

Missing comma between items.

  tests/fixtures/collections/nested_collections_with_errors.flx:1:6
  |
1 | f([1 2 3], g(4 5), [true false]);
  |      ^

Hint:
  Add a comma between items, e.g. `[a, b]`.


error[E073]: Missing Comma

Missing comma between items.

  tests/fixtures/collections/nested_collections_with_errors.flx:1:8
  |
1 | f([1 2 3], g(4 5), [true false]);
  |        ^

Hint:
  Add a comma between items, e.g. `[a, b]`.


error[E073]: Missing Comma

Missing comma between arguments.

  tests/fixtures/collections/nested_collections_with_errors.flx:1:16
  |
1 | f([1 2 3], g(4 5), [true false]);
  |                ^

Hint:
  Add a comma between items, e.g. `f(a, b)`.


error[E073]: Missing Comma

Missing comma between items.

  tests/fixtures/collections/nested_collections_with_errors.flx:1:26
  |
1 | f([1 2 3], g(4 5), [true false]);
  |                          ^^^^^

Hint:
  Add a comma between items, e.g. `[a, b]`.

Found 4 errors.
